select boxes, card shadow adjust

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,42 @@
 .App {
   text-align: center;
+  background: linear-gradient(45deg,#8e9eab,#eef2f3 );;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
+.select-flex {
+  display: flex;
+  flex-direction: row;
+  width: 80vw;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.custom-select{
+  appearance: none;
+  height: 57px;
+  padding: 10px 38px 10px 16px;
+  background-color: rgb(252, 252, 252);
+  margin: 0 3.5vw;
+  /* font-family: 'Poppins', sans-serif; */
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 1.3rem;
+}
+
+.custom-select:hover {
+  border: 2px solid rgb(53, 53, 53);
+}
+.custom-select:focus {
+  border: 2px solid rgb(52, 52, 52);
+  box-shadow: 0 3px 5px 0 rgba(0,0,0,.2);
+  outline: none;
+}
+/* remove default arrow in IE */
+select::-ms-expand {
+  display:none;
+}
