--- a/src/components/card-list/card-list.styles.css
+++ b/src/components/card-list/card-list.styles.css
@@ -23,15 +23,11 @@
   padding: 0rem 0.2rem;
   margin: 0rem 0.8rem;
   cursor:pointer;
-
-  transform: rotate3d(1,0,0, 30deg);
-  transition: 0.45s;
-
   width:5.2vw;
   min-width: 5rem;
-  /* border: 1px solid red; */
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
-
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -10px;
+  transform: rotate3d(1,0,0, 25deg);
+  transition: 0.45s;
 }
 
 .card-container img {
@@ -40,6 +36,6 @@
 }
 
 .card-container:hover {
-  transform: scale(1.05) translateY(-0.2rem) rotate3d(1,0,0,0deg);
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  transform: scale(1.04) translateY(-0.2rem) rotate3d(1,0,0,-10deg);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 5px 28px, rgba(0, 0, 0, 0.18) 0px -10px 10px;
 }
