--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,10 @@
   text-align: center;
   background: linear-gradient(45deg,#8e9eab,#eef2f3 );;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
+  height: 100vh;
 }
 
 .select-flex {
@@ -26,17 +27,28 @@
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   font-size: 1.3rem;
+  color:rgb(100, 100, 100);
+  border: none;
+  border-bottom: 4px solid rgb(29, 29, 29);
+  transition: 400ms ease;
+
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 .custom-select:hover {
-  border: 2px solid rgb(53, 53, 53);
+  border-bottom: 6px solid #d9b205;
+  background-color: #f8cf1f;
+  transition: 400ms ease;
 }
 .custom-select:focus {
-  border: 2px solid rgb(52, 52, 52);
-  box-shadow: 0 3px 5px 0 rgba(0,0,0,.2);
+  border-bottom: 4px solid #d9b205;
+  color:rgb(0, 0, 0);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   outline: none;
+  transition: 400ms ease;
 }
 /* remove default arrow in IE */
 select::-ms-expand {
   display:none;
 }
+
