--- a/src/components/card-list/card-list.styles.css
+++ b/src/components/card-list/card-list.styles.css
@@ -33,9 +33,22 @@
 .card-container img {
   width:100%;
   cursor:pointer;
+  position: relative;
+  z-index: 5;
 }
 
 .card-container:hover {
   transform: scale(1.04) translateY(-0.2rem) rotate3d(1,0,0,-10deg);
   box-shadow: rgba(0, 0, 0, 0.25) 0px 5px 28px, rgba(0, 0, 0, 0.18) 0px -10px 10px;
+}
+
+.image-overlay {
+  /* color: rgb(228, 75, 75); */
+  color: rgb(95, 210, 120);
+  position: relative;
+  z-index: 10;
+  top: -5rem;
+  font-family: 'Luckiest Guy', cursive;
+  font-size: 4.5rem;
+  line-height: 0;
 }
