--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+:root {
+  --g-yellow:#f8cf1f;
+  --g-blue:#233E97;
+  --g-red:#E92A48;
+  --g-check-green:#60d279;
+  --g-check-red: #e44b4b;
+
+
+}
+
+
 .App {
   text-align: center;
   background: linear-gradient(45deg,#8e9eab,#eef2f3 );;
@@ -8,6 +19,142 @@
   height: 100vh;
 }
 
+.title-group {
+  /* font-family: 'Fredoka One', cursive;
+  font-size: 6rem;
+  color: #E92A48;
+  letter-spacing: -0.3rem;
+  font-weight: 400;
+  -webkit-text-stroke: 2px var(--g-blue);
+  text-shadow: 0px 0px 5px rgba(221, 255, 0, 0.389); */
+  /* border: 1px solid green; */
+  height: 250px;
+  width: 30rem;
+  /* position: relative; */
+  /* margin: 1rem 0rem; */
+  margin-bottom: 6rem;
+}
+
+.shift-lines {
+  transform: translate(-4.5rem, 0.5rem);
+}
+
+.line-1 {
+  position: relative;
+  /* line-height: ; */
+}
+.line-2 {
+  position: relative;
+  line-height: 0rem;
+  transform: translate(3.5rem,0.1rem);
+}
+.line-3 {
+  position: relative;
+  line-height: 0;
+  transform: translate(14.5rem,-3.0rem);
+}
+
+.red-title-1 {
+  /* font-family: 'Fredoka One', cursive; */
+  font-family: 'Sono', sans-serif;
+  color: var(--g-red);
+  -webkit-text-stroke: 1px var(--g-blue);
+  font-size: 7rem;
+  letter-spacing: -0.65rem;
+  font-weight: 900;
+  /* border: 1px solid purple; */
+  position: relative;
+  z-index: 10;
+  text-shadow: 3px -2px 9px #ffffff77; 
+}
+
+
+
+.blue-title-1 {
+  /* font-family: 'Fredoka One', cursive; */
+  font-family: 'Sono', sans-serif;
+  letter-spacing: -2rem;
+  font-weight: 900;
+color: var(--g-blue);
+text-shadow: -4px 4px 10px var(--g-blue); 
+-webkit-text-stroke: 10px var(--g-blue);
+font-size: 9rem;
+/* border: 1px solid pink; */
+position: relative;
+z-index: 9;
+transform: translate(-0.65rem,-5.2rem);
+line-height: 2rem;
+font-stretch: ultra-expanded;
+}
+
+.red-title-2 {
+  /* font-family: 'Fredoka One', cursive; */
+  font-family: 'Sono', sans-serif;
+  color: var(--g-red);
+  -webkit-text-stroke: 1px var(--g-blue);
+  font-size: 7rem;
+  letter-spacing: -0.2rem;
+  font-weight: 900;
+  /* border: 1px solid purple; */
+  position: relative;
+  z-index: 12;
+  text-shadow: 3px -3px 8px #ffffff77; 
+}
+
+
+
+.blue-title-2 {
+  /* font-family: 'Fredoka One', cursive; */
+  font-family: 'Sono', sans-serif;
+  letter-spacing: -1.5rem;
+  font-weight: 900;
+color: var(--g-blue);
+text-shadow: -4px 4px 10px var(--g-blue); 
+-webkit-text-stroke: 10px var(--g-blue);
+font-size: 9rem;
+/* border: 1px solid pink; */
+position: relative;
+z-index: 6;
+transform: translate(-0.7rem,-0.3rem);
+/* line-height: 2rem; */
+font-stretch: ultra-expanded;
+}
+
+.red-title-3 {
+  /* font-family: 'Fredoka One', cursive; */
+  font-family: 'Sono', sans-serif;
+  color: var(--g-red);
+  -webkit-text-stroke: 1px var(--g-blue);
+  font-size: 14rem;
+  letter-spacing: -0.2rem;
+  font-weight: 900;
+  /* border: 1px solid purple; */
+  position: relative;
+  z-index: 10;
+  line-height: 0rem;
+  text-shadow: 4px -2px 12px #ffffff82; 
+}
+
+
+
+.blue-title-3 {
+  /* font-family: 'Fredoka One', cursive; */
+  font-family: 'Sono', sans-serif;
+  letter-spacing: -1.5rem;
+  font-weight: 900;
+  color: var(--g-blue);
+  text-shadow: -6px 2px 10px var(--g-blue); 
+  -webkit-text-stroke: 18px var(--g-blue);
+  font-size: 16rem;
+  /* border: 1px solid pink; */
+  position: relative;
+  z-index: 9;
+  transform: translate(-0.6rem, 0rem);
+  line-height: 0rem;
+  font-stretch: ultra-expanded;
+}
+
+
 .select-flex {
   display: flex;
   flex-direction: row;
@@ -15,13 +162,24 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 1rem;
+  position: relative;
+  /* border: 1px solid red; */
+}
+
+.ask-text {
+  font-family: 'Lato', sans-serif;
+  font-weight: 800;
+  font-size: 2.7rem;
+  color: var(--g-blue);
+  text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.478);
+  transform: translate;
 }
 
 .custom-select{
   appearance: none;
   height: 57px;
   padding: 10px 38px 10px 16px;
-  background-color: #fcf9ea;
+  background-color: #ffffff;
   margin: 0 3.5vw;
   /* font-family: 'Poppins', sans-serif; */
   font-family: 'Lato', sans-serif;
@@ -36,12 +194,12 @@
 }
 
 .custom-select:hover {
-  border-bottom: 6px solid #f8cf1f;
+  border-bottom: 6px solid var(--g-blue);
   /* background-color: #fff1b1; */
   transition: 400ms ease;
 }
 .custom-select:focus {
-  border-bottom: 4px solid #f8cf1f;
+  border-bottom: 4px solid var(--g-blue);
   color:rgb(0, 0, 0);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   outline: none;
