--- a/src/components/card-list/card-list.styles.css
+++ b/src/components/card-list/card-list.styles.css
@@ -43,8 +43,29 @@
   box-shadow: rgba(0, 0, 0, 0.25) 0px 5px 28px, rgba(0, 0, 0, 0.18) 0px -10px 10px;
 }
 
+
 .image-overlay {
-  /* color: var(--g-check-red); */
+  color: var(--g-check-red);
+  position: relative;
+  z-index: 10;
+  top: -5rem;
+  font-family: 'Luckiest Guy', cursive;
+  font-size: 4.5rem;
+  line-height: 0;
+}
+
+
+.dismiss-overlay {
+  color: var(--g-check-red);
+  position: relative;
+  z-index: 10;
+  top: -5rem;
+  font-family: 'Luckiest Guy', cursive;
+  font-size: 4.5rem;
+  line-height: 0;
+}
+
+.correct-overlay {
   color: var(--g-check-green);
   position: relative;
   z-index: 10;
