--- a/src/App.css
+++ b/src/App.css
@@ -180,6 +180,7 @@ font-stretch: ultra-expanded;
   appearance: none;
   height: 57px;
   padding: 10px 38px 10px 16px;
+  min-width: 5rem;
   background-color: #ffffff;
   margin: 0 3.5vw;
   /* font-family: 'Poppins', sans-serif; */
@@ -219,9 +220,10 @@ select::-ms-expand {
   align-items: center;
 }
 .guess-box {
-  height:4rem;
+  height: 4rem;
   width: 4rem;
-  border: 1px solid black;
+  border: 0.4rem var(--g-blue) solid;
+    border-radius: 0.7rem;
   background-color: white;
   margin: 0 1rem;
   font-family: 'Luckiest Guy', cursive;
@@ -237,7 +239,7 @@ select::-ms-expand {
   width: 70vw;
   font-size: calc(1.5rem + 0.8vw);
   font-weight: 800;
-  animation: responseFly 1.5s ease-out;
+
   -webkit-text-stroke: 1px var(--g-response);
   text-shadow: -1px -1px 2px var(--g-response);
 }
@@ -248,6 +250,10 @@ select::-ms-expand {
 
 .response-no {
   color: var(--g-check-red)
+}
+
+.response-fly-animation {
+  animation: responseFly 1.5s ease-out;
 }
 
 @keyframes responseFly {
