--- a/src/App.css
+++ b/src/App.css
@@ -194,6 +194,25 @@ font-stretch: ultra-expanded;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
+.custom-select-2nd{
+  appearance: none;
+  height: 57px;
+  padding: 10px 38px 10px 16px;
+  min-width: 5rem;
+  background-color: #ffffff;
+  margin: 0 3.5vw;
+  /* font-family: 'Poppins', sans-serif; */
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 1.3rem;
+  color:rgb(28, 28, 28);
+  border: none;
+  border-bottom: 4px solid rgb(29, 29, 29);
+  transition: 400ms ease;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  animation: q-box-anim 0.4s ease-out;
+}
+
 .custom-select:hover {
   border-bottom: 6px solid var(--g-blue);
   /* background-color: #fff1b1; */
@@ -209,6 +228,27 @@ font-stretch: ultra-expanded;
 /* remove default arrow in IE */
 select::-ms-expand {
   display:none;
+}
+
+
+@keyframes q-box-anim {
+  0% {
+    transform: scale(0.7) translateX(4rem);
+  }
+
+  70% {
+    transform: scale(0.7)  translateX(-1rem);
+  }
+  80% {
+    transform:translateX(1rem);
+  }
+  90% {
+    transform:translateX(-0.5rem);
+  }
+  100% {
+    transform: scale(1)  translateX(0rem);
+  }
+  
 }
 
 
