--- a/src/components/card-list/card-list.styles.css
+++ b/src/components/card-list/card-list.styles.css
@@ -44,7 +44,7 @@
 }
 
 
-.image-overlay {
+/* .image-overlay {
   color: var(--g-check-red);
   position: relative;
   z-index: 10;
@@ -52,10 +52,10 @@
   font-family: 'Luckiest Guy', cursive;
   font-size: 4.5rem;
   line-height: 0;
-}
+} */
 
 
-.dismiss-overlay {
+/* .dismiss-overlay {
   color: var(--g-check-red);
   position: relative;
   z-index: 10;
@@ -63,9 +63,10 @@
   font-family: 'Luckiest Guy', cursive;
   font-size: 10rem;
   line-height: 0;
-}
+  text-shadow: 1px 1px 2px rgb(63, 63, 63);
+} */
 
-.correct-overlay {
+/* .correct-overlay {
   color: var(--g-check-green);
   position: relative;
   z-index: 10;
@@ -73,4 +74,5 @@
   font-family: 'Luckiest Guy', cursive;
   font-size: 14rem;
   line-height: 0;
-}
+  text-shadow: 1px 1px 2px rgb(0, 0, 0);
+} */
