--- a/src/App.css
+++ b/src/App.css
@@ -17,23 +17,13 @@
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
+  padding-bottom: 5rem;
 }
 
 .title-group {
-  /* font-family: 'Fredoka One', cursive;
-  font-size: 6rem;
-  color: #E92A48;
-  letter-spacing: -0.3rem;
-  font-weight: 400;
-  -webkit-text-stroke: 2px var(--g-blue);
-  text-shadow: 0px 0px 5px rgba(221, 255, 0, 0.389); */
-  /* border: 1px solid green; */
-  height: 250px;
+  height: 15rem;
   width: 30rem;
-  /* position: relative; */
-  /* margin: 1rem 0rem; */
-  margin-bottom: 6rem;
 }
 
 .shift-lines {
@@ -42,7 +32,6 @@
 
 .line-1 {
   position: relative;
-  /* line-height: ; */
 }
 .line-2 {
   position: relative;
@@ -52,18 +41,17 @@
 .line-3 {
   position: relative;
   line-height: 0;
-  transform: translate(14.5rem,-3.0rem);
+  transform: translate(calc(11.5rem + 2.5vw),-2.5rem);
 }
 
 .red-title-1 {
-  /* font-family: 'Fredoka One', cursive; */
   font-family: 'Sono', sans-serif;
   color: var(--g-red);
   -webkit-text-stroke: 1px var(--g-blue);
-  font-size: 7rem;
-  letter-spacing: -0.65rem;
+  /* font-size: 7rem; */
+  font-size: calc(5.5rem + 2vw);
+  letter-spacing: -0.60rem;
   font-weight: 900;
-  /* border: 1px solid purple; */
   position: relative;
   z-index: 10;
   text-shadow: 3px -2px 9px #ffffff77; 
@@ -79,11 +67,12 @@
 color: var(--g-blue);
 text-shadow: -4px 4px 10px var(--g-blue); 
 -webkit-text-stroke: 10px var(--g-blue);
-font-size: 9rem;
+/* font-size: 9rem; */
+font-size: calc(7.5rem + 2vw);
 /* border: 1px solid pink; */
 position: relative;
 z-index: 9;
-transform: translate(-0.65rem,-5.2rem);
+transform: translate(-0.65rem,calc(-4.6rem - 1vw));
 line-height: 2rem;
 font-stretch: ultra-expanded;
 }
@@ -93,7 +82,7 @@ font-stretch: ultra-expanded;
   font-family: 'Sono', sans-serif;
   color: var(--g-red);
   -webkit-text-stroke: 1px var(--g-blue);
-  font-size: 7rem;
+  font-size: calc(5.5rem + 2vw);
   letter-spacing: -0.2rem;
   font-weight: 900;
   /* border: 1px solid purple; */
@@ -112,7 +101,8 @@ font-stretch: ultra-expanded;
 color: var(--g-blue);
 text-shadow: -4px 4px 10px var(--g-blue); 
 -webkit-text-stroke: 10px var(--g-blue);
-font-size: 9rem;
+/* font-size: 9rem; */
+font-size: calc(7.5rem + 2vw);
 /* border: 1px solid pink; */
 position: relative;
 z-index: 6;
@@ -126,7 +116,8 @@ font-stretch: ultra-expanded;
   font-family: 'Sono', sans-serif;
   color: var(--g-red);
   -webkit-text-stroke: 1px var(--g-blue);
-  font-size: 14rem;
+  /* font-size: 14rem; */
+  font-size: calc(10.5rem + 2vw);
   letter-spacing: -0.2rem;
   font-weight: 900;
   /* border: 1px solid purple; */
@@ -146,7 +137,8 @@ font-stretch: ultra-expanded;
   color: var(--g-blue);
   text-shadow: -6px 2px 10px var(--g-blue); 
   -webkit-text-stroke: 18px var(--g-blue);
-  font-size: 16rem;
+  /* font-size: 16rem; */
+  font-size: calc(11.5rem + 2vw);
   /* border: 1px solid pink; */
   position: relative;
   z-index: 9;
@@ -159,12 +151,13 @@ font-stretch: ultra-expanded;
 .select-flex {
   display: flex;
   flex-direction: row;
-  width: 80vw;
-  justify-content: center;
+  flex-wrap:wrap;
+  width: 60%;
+  justify-content: space-around;
   align-items: center;
+  text-align: center;
   margin-bottom: 1rem;
   position: relative;
-  /* border: 1px solid red; */
 }
 
 .ask-text {
@@ -182,7 +175,7 @@ font-stretch: ultra-expanded;
   padding: 10px 38px 10px 16px;
   min-width: 5rem;
   background-color: #ffffff;
-  margin: 0 3.5vw;
+  margin: 0.5rem;
   /* font-family: 'Poppins', sans-serif; */
   font-family: 'Lato', sans-serif;
   font-weight: 400;
@@ -200,7 +193,7 @@ font-stretch: ultra-expanded;
   padding: 10px 38px 10px 16px;
   min-width: 5rem;
   background-color: #ffffff;
-  margin: 0 3.5vw;
+  margin: 0.5rem;
   /* font-family: 'Poppins', sans-serif; */
   font-family: 'Lato', sans-serif;
   font-weight: 400;
@@ -265,9 +258,10 @@ select::-ms-expand {
   font-weight: 600;
   background-color: white;
   border-radius: 1.2rem;
-
+  margin: 0.5rem;
   border-radius: 2rem;
   border: 0.4rem solid var(--g-yellow);
+  cursor: pointer;
 
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
@@ -280,7 +274,24 @@ select::-ms-expand {
   padding: 0.4rem 0.6rem 0.6rem 0.8rem;
   color: var(--g-blue);
   text-shadow: 1px 1px 2px rgb(63, 63, 63);
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px, rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  transition: all 0.2s ease-in;
+}
+
+.dismiss-button-active {
+  background-color: rgb(218, 218, 218);
+  padding: 0 1rem;
+  border-left:  0.1rem solid rgb(176, 176, 176);
+  border-top-left-radius: 2rem;
+  border-bottom-left-radius: 2rem;
+  padding: 0.4rem 0.6rem 0.6rem 0.8rem;
+  color: var(--g-blue);
+  text-shadow: 1px 1px 2px rgb(63, 63, 63);
+  box-shadow: rgba(0, 0, 0, 0.137) 0px -50px 36px -28px inset, rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  
+  
+  ;
+  transition: all 0.2s ease-in;
 }
 
 .guess-button {
@@ -292,7 +303,22 @@ select::-ms-expand {
   color: var(--g-blue);
   text-shadow: 1px 1px 2px rgb(63, 63, 63);
   transition: .2s ease-in;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px, rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  transition: all 0.2s ease-in;
+}
+
+.guess-button-active {
+  background-color: rgb(218, 218, 218);
+  padding: 0 1rem;
+  border-left:  0.1rem solid rgb(176, 176, 176);
+  border-top-right-radius: 2rem;
+  border-bottom-right-radius: 2rem;
+  padding: 0.4rem 1.2rem 0.6rem 0.6rem;
+  color: var(--g-blue);
+  text-shadow: 1px 1px 2px rgb(63, 63, 63);
+  transition: .2s ease-in;
+  box-shadow: rgba(0, 0, 0, 0.137) 0px -50px 36px -28px inset, rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  transition: all 0.2s ease-in;
 }
 
 .dismiss-button:hover, .guess-button:hover {
@@ -305,23 +331,30 @@ select::-ms-expand {
 
 
 
+
 /*  GUESSES */
 
 .guesses-container {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: nowrap;
+  margin: 2.0rem 0rem 1.5rem 0rem;
 }
 .guess-box {
-  height: 4rem;
-  width: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  height: calc(2.5rem + 0.8vw);
+  width: calc(2.5rem + 0.8vw);
   border: 0.4rem var(--g-blue) solid;
     border-radius: 0.7rem;
   background-color: white;
-  margin: 0 1rem;
-  font-family: 'Luckiest Guy', cursive;
+  margin: 0 0.8rem;
+  font-family: 'Luckiest Guy', sans-serif;
   font-size: 2.5rem;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
 
@@ -332,10 +365,11 @@ select::-ms-expand {
 .response {
 
   /* border: 1px solid red; */
-  width: 70vw;
+  width: 100%;
   font-size: calc(1.5rem + 0.8vw);
   font-weight: 800;
-
+  font-family:Arial, Helvetica, sans-serif;
+  margin: 1rem;
   -webkit-text-stroke: 1px var(--g-response);
   text-shadow: -1px -1px 2px var(--g-response);
 }
@@ -461,8 +495,20 @@ select::-ms-expand {
   background-color: rgba(255, 255, 255, 0.564);
 }
 
+.help-detail-text {
+  font-size: 1rem;
+  font-weight: 400;
+  margin: 0rem 0rem 1rem 0rem;
+  width: 80%;
+  position: relative;
+  z-index:2;
+  /* text-shadow: 0px 0px 1px rgb(89, 89, 89); */
+  background-color: rgba(255, 255, 255, 0.564);
+}
+
 .play-again {
   background-color: white;
+  width: fit-content;
   border: 0.2rem var(--g-blue) solid;
   background-color: var(--g-yellow);
   border-radius: 0.5rem;
@@ -515,4 +561,50 @@ select::-ms-expand {
   transform: translate(-50%, -50%) scale(0.7);
   z-index:1;
   filter: grayscale(0%);
+}
+
+.help-button {
+  position: absolute;
+  top: 0.5vw;
+  right: 0.5vw;
+  font-size: 1rem;
+  padding: 0.2rem 0.5rem;
+  font-weight: 600;
+  color: white;
+  border: 3px solid white;
+  border-radius: 10rem;
+  background-color: var(--g-blue);
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  transition: all 0.3s ease-in-out;
+}
+
+.help-button:hover {
+  background-color: var(--g-yellow);
+  transition: all 0.3s ease-in-out;
+}
+
+
+a:link, a:visited, a:active {
+  color: var(--g-blue);
+  font-size: 2rem;
+  font-weight: 500;
+  transition: all 0.3s ease-in-out;
+  text-decoration: none;
+}
+
+a:hover {
+  color: var(--g-yellow);
+  transition: all 0.3s ease-in-out;
+  text-decoration: none;
+}
+
+.wrap-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  margin: 0.5rem 0;
+  width: 80vw;
+  text-align: center;
 }
