--- a/src/components/card-list/card-list.styles.css
+++ b/src/components/card-list/card-list.styles.css
@@ -6,7 +6,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: flex-start;
-  border: 1.5rem var(--g-blue) solid;
+  border: 1.4rem var(--g-blue) solid;
   border-radius: 3.5rem;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   background-image: url('../../assets/bg-img/p14.png');
@@ -28,7 +28,7 @@
   min-width: 5rem;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -10px;
   transform: rotate3d(1,0,0, 25deg);
-  transition: 0.45s;
+  transition: 0.25s;
 }
 
 .card-container img {
@@ -39,40 +39,41 @@
 }
 
 .card-container:hover {
-  transform: scale(1.04) translateY(-0.2rem) rotate3d(1,0,0,-10deg);
+  transform: scale(1.02) translateY(-0.2rem) rotate3d(1,0,0,-10deg);
   box-shadow: rgba(0, 0, 0, 0.25) 0px 5px 28px, rgba(0, 0, 0, 0.18) 0px -10px 10px;
+  transition: 0.25s;
 }
 
 
-/* .image-overlay {
+.image-overlay {
   color: var(--g-check-red);
   position: relative;
   z-index: 10;
-  top: -5rem;
-  font-family: 'Luckiest Guy', cursive;
+  bottom: 4rem;
+  font-family: 'Luckiest Guy', sans-serif;
   font-size: 4.5rem;
   line-height: 0;
-} */
+}
 
 
-/* .dismiss-overlay {
+.dismiss-overlay {
   color: var(--g-check-red);
   position: relative;
   z-index: 10;
-  top: -8rem;
-  font-family: 'Luckiest Guy', cursive;
-  font-size: 10rem;
+  bottom: 4rem;
+  font-family: 'Luckiest Guy', sans-serif;
+  font-size: 6rem;
   line-height: 0;
   text-shadow: 1px 1px 2px rgb(63, 63, 63);
-} */
+}
 
-/* .correct-overlay {
+.correct-overlay {
   color: var(--g-check-green);
   position: relative;
   z-index: 10;
-  top: -8rem;
-  font-family: 'Luckiest Guy', cursive;
-  font-size: 14rem;
+  bottom: 4rem;
+  font-family: 'Luckiest Guy', sans-serif;
+  font-size: 6rem;
   line-height: 0;
   text-shadow: 1px 1px 2px rgb(0, 0, 0);
-} */
+}
