--- a/src/App.css
+++ b/src/App.css
@@ -616,4 +616,74 @@ a:hover {
   margin: 0.5rem 0;
   width: 80vw;
   text-align: center;
+
+}
+
+
+
+.splash-container {
+  position: absolute;
+  z-index:-1;
+  height: 0vh;
+  width: 0vw;
+  /* background-color: white; */
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  animation: splash-anim 3s ease-out;
+
+}
+
+.splash-logo {
+  margin-top: 0rem;
+  animation: splash-logo 3s ease-out;
+}
+
+@keyframes splash-anim {
+  0% {
+    z-index:1000;
+    height: 150vh;
+    width: 100vw;
+    background-color: white;
+    
+  }
+
+  90% {
+    height: 100vh;
+    width: 100vw;
+    background-color: white;
+  }
+
+  99% {
+    height: 100vh;
+    width: 100vw;
+    /* background-color: white; */
+  }
+
+  100% {
+    height: 0vh;
+    width: 0vw;
+    background-color: transparent;
+  }
+  
+}
+
+@keyframes splash-logo {
+  0% {
+    margin-top: 20rem ;
+    
+  }
+
+  60% {
+    margin-top: 20rem ;
+  }
+
+  90% {
+    margin-top: 0rem ;
+  }
+
+  100% {
+    margin-top: 0rem ;
+  }
+  
 }
