--- a/src/App.css
+++ b/src/App.css
@@ -17,11 +17,11 @@
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-  height: 100%;
-  padding-bottom: 5rem;
+  height: 100vh;
+  /* padding-bottom: 5rem; */
 }
 
-.title-group {
+/* .title-group {
   height: 15rem;
   width: 30rem;
 }
@@ -48,7 +48,6 @@
   font-family: 'Sono', sans-serif;
   color: var(--g-red);
   -webkit-text-stroke: 1px var(--g-blue);
-  /* font-size: 7rem; */
   font-size: calc(5.5rem + 2vw);
   letter-spacing: -0.60rem;
   font-weight: 900;
@@ -60,32 +59,27 @@
 
 
 .blue-title-1 {
-  /* font-family: 'Fredoka One', cursive; */
   font-family: 'Sono', sans-serif;
   letter-spacing: -2rem;
   font-weight: 900;
-color: var(--g-blue);
-text-shadow: -4px 4px 10px var(--g-blue); 
--webkit-text-stroke: 10px var(--g-blue);
-/* font-size: 9rem; */
-font-size: calc(7.5rem + 2vw);
-/* border: 1px solid pink; */
-position: relative;
-z-index: 9;
-transform: translate(-0.65rem,calc(-4.6rem - 1vw));
-line-height: 2rem;
-font-stretch: ultra-expanded;
+  color: var(--g-blue);
+  text-shadow: -4px 4px 10px var(--g-blue); 
+  -webkit-text-stroke: 10px var(--g-blue);
+  font-size: calc(7.5rem + 2vw);
+  position: relative;
+  z-index: 9;
+  transform: translate(-0.65rem,calc(-4.6rem - 1vw));
+  line-height: 2rem;
+  font-stretch: ultra-expanded;
 }
 
 .red-title-2 {
-  /* font-family: 'Fredoka One', cursive; */
   font-family: 'Sono', sans-serif;
   color: var(--g-red);
   -webkit-text-stroke: 1px var(--g-blue);
   font-size: calc(5.5rem + 2vw);
   letter-spacing: -0.2rem;
   font-weight: 900;
-  /* border: 1px solid purple; */
   position: relative;
   z-index: 12;
   text-shadow: 3px -3px 8px #ffffff77; 
@@ -94,33 +88,26 @@ font-stretch: ultra-expanded;
 
 
 .blue-title-2 {
-  /* font-family: 'Fredoka One', cursive; */
   font-family: 'Sono', sans-serif;
   letter-spacing: -1.5rem;
   font-weight: 900;
-color: var(--g-blue);
-text-shadow: -4px 4px 10px var(--g-blue); 
--webkit-text-stroke: 10px var(--g-blue);
-/* font-size: 9rem; */
-font-size: calc(7.5rem + 2vw);
-/* border: 1px solid pink; */
-position: relative;
-z-index: 6;
-transform: translate(-0.7rem,-0.3rem);
-/* line-height: 2rem; */
-font-stretch: ultra-expanded;
+  color: var(--g-blue);
+  text-shadow: -4px 4px 10px var(--g-blue); 
+  -webkit-text-stroke: 10px var(--g-blue);
+  font-size: calc(7.5rem + 2vw);
+  position: relative;
+  z-index: 6;
+  transform: translate(-0.7rem,-0.3rem);
+  font-stretch: ultra-expanded;
 }
 
 .red-title-3 {
-  /* font-family: 'Fredoka One', cursive; */
   font-family: 'Sono', sans-serif;
   color: var(--g-red);
   -webkit-text-stroke: 1px var(--g-blue);
-  /* font-size: 14rem; */
   font-size: calc(10.5rem + 2vw);
   letter-spacing: -0.2rem;
   font-weight: 900;
-  /* border: 1px solid purple; */
   position: relative;
   z-index: 10;
   line-height: 0rem;
@@ -130,22 +117,19 @@ font-stretch: ultra-expanded;
 
 
 .blue-title-3 {
-  /* font-family: 'Fredoka One', cursive; */
   font-family: 'Sono', sans-serif;
   letter-spacing: -1.5rem;
   font-weight: 900;
   color: var(--g-blue);
   text-shadow: -6px 2px 10px var(--g-blue); 
   -webkit-text-stroke: 18px var(--g-blue);
-  /* font-size: 16rem; */
   font-size: calc(11.5rem + 2vw);
-  /* border: 1px solid pink; */
   position: relative;
   z-index: 9;
   transform: translate(-0.6rem, 0rem);
   line-height: 0rem;
   font-stretch: ultra-expanded;
-}
+} */
 
 
 .select-flex {
@@ -248,25 +232,9 @@ select::-ms-expand {
 
 /* MARKER BUTTONS */
 
-.active-marker-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-self: center;
-  font-size: 1.5rem;
-  font-weight: 600;
-  background-color: white;
-  border-radius: 1.2rem;
-  margin: 0.5rem;
-  border-radius: 2rem;
-  border: 0.4rem solid var(--g-yellow);
-  cursor: pointer;
 
-  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
-}
 
-.dismiss-button {
+/* .dismiss-button {
   padding: 0 1rem;
   border-left:  0.1rem solid rgb(176, 176, 176);
   border-top-left-radius: 2rem;
@@ -326,7 +294,7 @@ select::-ms-expand {
 .dismiss-button:hover, .guess-button:hover {
   background-color: rgb(236, 236, 236);
   transition: .2s ease-in;
-}
+} */
 
 
 
@@ -336,7 +304,7 @@ select::-ms-expand {
 
 /*  GUESSES */
 
-.guesses-container {
+/* .guesses-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -357,7 +325,7 @@ select::-ms-expand {
   font-family: 'Luckiest Guy', sans-serif;
   font-size: 2.5rem;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-}
+} */
 
 
 
@@ -376,7 +344,7 @@ select::-ms-expand {
   text-shadow: -1px -1px 2px var(--g-response);
 }
 
-.response-yes {
+/* .response-yes {
  color: var(--g-check-green);
  text-shadow: 1px 1px 2px rgb(63, 63, 63);
 }
@@ -384,7 +352,7 @@ select::-ms-expand {
 .response-no {
   color: var(--g-check-red);
   text-shadow: 1px 1px 2px rgb(63, 63, 63);
-}
+} */
 
 .response-fly-animation {
   animation: responseFly 0.8s ease-in;
@@ -416,28 +384,25 @@ select::-ms-expand {
   }
 } */
 
-.response-mark-delay:last-of-type {
-  animation: responseMarkFade 1.5s ease-out;
-}
+                /* .response-mark-delay:last-of-type {
+                  animation: responseMarkFade 1.5s ease-out;
+                }
 
-@keyframes responseMarkFade {
-  0% {
-    transform: scale(6) translateY(0);
-  }
-  50% {
-    transform: scale(2) translateY(0);
-  }
-  80% {
-    transform: scale(2)  translateY(0) ;  
-  }
-  /* 90% {
-    transform: translateY(-5rem) ;  
-  } */
-  100% {
-    transform: scale(1) translateY(0rem);
-  }
-  
-}
+                @keyframes responseMarkFade {
+                  0% {
+                    transform: scale(6) translateY(0);
+                  }
+                  50% {
+                    transform: scale(2) translateY(0);
+                  }
+                  80% {
+                    transform: scale(2)  translateY(0) ;  
+                  }
+                  100% {
+                    transform: scale(1) translateY(0rem);
+                  }
+                  
+                } */
 
 /* END GAME MODAL */
 
@@ -620,70 +585,3 @@ a:hover {
 }
 
 
-
-.splash-container {
-  position: absolute;
-  z-index:-1;
-  height: 0vh;
-  width: 0vw;
-  /* background-color: white; */
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  animation: splash-anim 3s ease-out;
-
-}
-
-.splash-logo {
-  margin-top: 0rem;
-  animation: splash-logo 3s ease-out;
-}
-
-@keyframes splash-anim {
-  0% {
-    z-index:1000;
-    height: 150vh;
-    width: 100vw;
-    background-color: white;
-    
-  }
-
-  90% {
-    height: 100vh;
-    width: 100vw;
-    background-color: white;
-  }
-
-  99% {
-    height: 100vh;
-    width: 100vw;
-    /* background-color: white; */
-  }
-
-  100% {
-    height: 0vh;
-    width: 0vw;
-    background-color: transparent;
-  }
-  
-}
-
-@keyframes splash-logo {
-  0% {
-    margin-top: 20rem ;
-    
-  }
-
-  60% {
-    margin-top: 20rem ;
-  }
-
-  90% {
-    margin-top: 0rem ;
-  }
-
-  100% {
-    margin-top: 0rem ;
-  }
-  
-}
