all components except ask-options

--- a/src/components/marker-button-group/marker-button-group.styles.css
+++ b/src/components/marker-button-group/marker-button-group.styles.css
@@ -3,6 +3,7 @@
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: center;
+  width: fit-content;
   align-self: center;
   font-size: 1.5rem;
   font-weight: 600;
