--- a/src/components/guess-scoreboard/guess-scoreboard.styles.css
+++ b/src/components/guess-scoreboard/guess-scoreboard.styles.css
@@ -27,7 +27,27 @@
   text-shadow: 1px 1px 2px rgb(63, 63, 63);
  }
  
- .response-no {
-   color: var(--g-check-red);
-   text-shadow: 1px 1px 2px rgb(63, 63, 63);
- }
+.response-no {
+  color: var(--g-check-red);
+  text-shadow: 1px 1px 2px rgb(63, 63, 63);
+}
+
+.response-mark-delay:last-of-type {
+animation: responseMarkFade 1.5s ease-out;
+}
+
+@keyframes responseMarkFade {
+  0% {
+    transform: scale(6) translateY(0);
+  }
+  50% {
+    transform: scale(2) translateY(0);
+  }
+  80% {
+    transform: scale(2)  translateY(0) ;  
+  }
+  100% {
+    transform: scale(1) translateY(0rem);
+  }
+  
+}
