--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   --g-check-green:#60d279;
   --g-check-red: #e44b4b;
   --g-response: #1f1f1f86;
+  background: linear-gradient(45deg,#8e9eab,#eef2f3 );
 
 
 }
@@ -12,13 +13,12 @@
 
 .App {
   text-align: center;
-  background: linear-gradient(45deg,#8e9eab,#eef2f3 );;
+  background: linear-gradient(45deg,#8e9eab,#eef2f3 );
   display: flex;
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
-  /* padding-bottom: 5rem; */
+  padding-bottom: 4rem;
 }
 
 /* .title-group {
